[gd_scene load_steps=18 format=2]

[ext_resource path="res://assests/test scene/arrow_guy.gd" type="Script" id=1]
[ext_resource path="res://assests/test scene/just for testing/bow_and_hand.png" type="Texture" id=2]
[ext_resource path="res://assests/test scene/just for testing/arrow_enemy.png" type="Texture" id=3]
[ext_resource path="res://assests/test scene/just for testing/attack_top_view/while_attack/attacka_1.png" type="Texture" id=4]
[ext_resource path="res://assests/test scene/just for testing/attack_top_view/while everything else/hand_right.png" type="Texture" id=5]
[ext_resource path="res://assests/test scene/just for testing/attack_top_view/while_attack/attacka_2.png" type="Texture" id=6]
[ext_resource path="res://assests/test scene/just for testing/attack_top_view/while_attack/attacka_3.png" type="Texture" id=7]
[ext_resource path="res://assests/test scene/just for testing/attack_top_view/while_attack/attacka_4.png" type="Texture" id=8]
[ext_resource path="res://assests/test scene/just for testing/back_Hand/hand_on_attack.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.6853
height = 21.7098

[sub_resource type="Animation" id=2]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("main_body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("main_body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hand:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hand:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("top_hand:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("top_hand:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_fire"
} ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("main_body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("main_body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("main_body:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hand:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hand:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("top_hand:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("top_hand:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("hand:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 40.0, 40.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("top_hand:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90.0002, 90.0002 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("hand:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.67821, 5.85768 ), Vector2( 2.678, 4.3 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("top_hand:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4.60208, 6.01805 ), Vector2( -4.602, 5 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "knockback"
length = 0.3
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_idle"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hand:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -50.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("top_hand:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -77.1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hand:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("top_hand:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 18.5581 )

[node name="arrow_guy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.614897, 7.50527 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/knockback = SubResource( 4 )

[node name="hand" type="AnimatedSprite" parent="."]
position = Vector2( 2.67821, 5.85768 )
rotation = 0.698132
frames = SubResource( 5 )
animation = "attack"
offset = Vector2( 6, -2 )

[node name="main_body" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "idle"

[node name="top_hand" type="AnimatedSprite" parent="."]
position = Vector2( -4.60208, 6.01805 )
rotation = 1.5708
frames = SubResource( 7 )
animation = "attack"
offset = Vector2( 5, -6 )

[node name="triggers" type="Node2D" parent="."]

[node name="player_detect" type="Area2D" parent="triggers"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="triggers/player_detect"]
polygon = PoolVector2Array( 8.55686, -4.85224, 10.0714, -21.3366, 119.976, -135.294, 170.487, -122.947, 194.461, -93.054, 216.461, -53.2155, 223.002, -11.5933, 212.299, 25.8667, 197.425, 45.7037, 9, 18.5 )

[node name="attack_detect" type="Area2D" parent="triggers" groups=[
"Enemy",
]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/attack_detect"]
position = Vector2( -0.166855, 6.50734 )
shape = SubResource( 8 )

[node name="timers" type="Node2D" parent="."]

[node name="attack_delay" type="Timer" parent="timers"]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="triggers/player_detect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="triggers/player_detect" to="." method="_on_player_detect_body_exited"]
